fix launch ADB block issue