@@ -2,9 +2,13 @@ package feiw;
 
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.Socket;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 public class AndroidLogSource extends LogSource {
 
@@ -25,11 +29,18 @@ public class AndroidLogSource extends LogSource {
         setStatus(stConnecting);
 
             try {
-                mAdbProcess = Runtime.getRuntime().exec(SystemConfigs.instance().getAdbPath() + "/adb logcat -vthreadtime");
-                final BufferedReader rd = new BufferedReader(new InputStreamReader(mAdbProcess.getInputStream()));
+                  List <String> adbcmd =   Arrays.asList(SystemConfigs.instance().getAdbPath() + "adb", "logcat", "-vthreadtime");
+                   
+                ProcessBuilder pb = new ProcessBuilder();
+                pb.redirectErrorStream(true);
+                pb.command(adbcmd);
+                pb.directory(new File(SystemConfigs.instance().getAdbPath()));
+                mAdbProcess = pb.start();
+                BufferedReader rd = new BufferedReader(new InputStreamReader(mAdbProcess.getInputStream()));
+
                 String s = rd.readLine();
                 if (s.contains("waiting for device")) {
-                    throw new DeviceNotConnected("Device not connected");
+                    throw new DeviceNotConnected("No Android connected");
                 }
                 addLogItem(s, false);
                 setStatus(stConnected);
@@ -46,7 +57,7 @@ public class AndroidLogSource extends LogSource {
                 }.start();
           
             } catch (IOException e1) {
-                throw new DeviceNotConnected("Device not connected");
+                throw new DeviceNotConnected("No Android connected");
             }
  
 
